:art: fix: All Class Codes Unify styles and remove unnecessary annotations and methods. Most Intellij Warnings Phrases Resolved